--- a/style.css
+++ b/style.css
@@ -1,3 +1,116 @@
+body{
+  background-color: rgb(193, 201, 208);
+}
+
 .esports-info {
   display: inline-block;
+  /* background-color: blue; */
+  width: 350px;
+  height: 400px;
+ margin: 10px;
+ overflow: auto;
+
 }
+
+.esports-info-img{
+width: 350px;
+height: 200px;
+border-radius: 10px;
+/* border: 5px inset lime; */
+/* position: fixed; */
+/* margin: 20px; */
+
+}
+
+div {
+  /* display: flex; */
+    flex-flow: row nowrap;
+    align-items: center;
+    align-content: center;
+    justify-content: space-between;
+  
+}
+
+.dota-tournament-img {
+  float: left;
+  width: 450px;
+  height: 200px;
+  margin: 0 20px 0 0;
+  /* border: 10px lime;
+  background-color: coral; */
+  border-radius: 10px;
+}
+.esports-tournaments {
+  position: static;
+
+}
+
+h1,h2{
+  text-align: center;
+  color: rgb(0, 132, 255);
+}
+
+p{
+  text-align: justify;
+}
+
+
+
+
+
+
+
+
+
+ /* .box
+{
+    background: tomato;
+    width: 100px;
+    height: 100px;
+    margin-bottom: 10px;
+}
+.left
+{
+    background: lime;
+    float: right;
+}
+.left-2
+{
+    background: cyan;
+    float: right;
+}
+.right
+{
+    float: right;
+}
+
+p
+{ */
+/* kleiner tipp, um den text zu blocktext zu ändern */
+/* text-align: justify;
+}
+.testbild
+/* { */
+
+/*   
+    width: 200px;
+    float: right;
+    margin-left: 10px;
+}
+
+.grid .column
+{
+    float: left;
+    width: 32%;
+    height: 100px;
+    background: grey;
+    border: 1px solid black;
+}
+
+.grid .column-2
+{
+    float: left;
+    width: 25%;
+    height: 100px;
+    background: tomato;
+}  */ */ */
